--- a/package.json
+++ b/package.json
@@ -22,6 +22,12 @@
   },
   "homepage": "https://github.com/dwabe/20-5-webpack-modes#readme",
   "devDependencies": {
+    "babel": "^6.23.0",
+    "babel-core": "^6.26.3",
+    "babel-loader": "^8.0.6",
+    "babel-preset-env": "^1.7.0",
+    "babel-preset-react": "^6.24.1",
+    "react": "^16.8.6",
     "webpack": "^4.35.2",
     "webpack-cli": "^3.3.5"
   }
