--- a/package.json
+++ b/package.json
@@ -30,5 +30,8 @@
     "react": "^16.8.6",
     "webpack": "^4.35.2",
     "webpack-cli": "^3.3.5"
+  },
+  "dependencies": {
+    "@babel/core": "^7.5.5"
   }
 }
